<resources>
    <string name="app_name">Shop</string>
    <string name="logo">app logo</string>
    <string name="about_me">About me</string>
    <string name="textAboutMe">Hello there! I\'m Wojtek and I\'m young programmer, who created this mobile application.</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="repeat_password">repeat password</string>
    <string name="product_name">product name</string>
    <string name="add_to_card">Add to card</string>
    <string name="back">back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="selected_product">Selected product:</string>
    <string name="buy">Buy</string>
    <string name="log_in_with_github">Log in with GitHub</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="where_are_we">Where are we?</string>

</resources>